--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -82,7 +82,7 @@
 				</div>
 				<div class="row">
 					<h3>Describe yourself in 4 memes</h3>
-        	            <img src="https://pbs.twimg.com/media/EfDBO_mWsAABzUn.jpg" title="mem1.jpg" alt="" style="height:200px; margin:5px 5px 10px 5px; " >
+        	            <img mem1.jpg" title="mem1.jpg" alt="" style="height:200px; margin:5px 5px 10px 5px; " >
 						<img src="https://pbs.twimg.com/media/Eauz32wXQAInct1.jpg" title="mem2.jpg" alt="" style="height:200px; margin:5px 5px 10px 5px; " >
 						<img src="https://pbs.twimg.com/media/EaOB3dCXgAAKBCu.jpg" title="mem3.jpg" alt="" style="height:200px; margin:5px 5px 10px 5px; " >
 						<img src="https://ia.wampi.ru/2020/10/04/12D903B0-E76C-4048-BF52-1D7941FBB658.jpg" title="mem4.jpg" alt="" style="height:200px; margin:5px 5px 10px 5px; " >
